RESOLVED FIXED186930
[Web Animations] Accelerated animations don't respect a positive delay value
https://bugs.webkit.org/show_bug.cgi?id=186930
Summary [Web Animations] Accelerated animations don't respect a positive delay value
dwilson1
Reported 2018-06-22 10:36:06 PDT
Animations specified with a positive delay in its Timing options do not visually start animating. It seems undefined, zero, and negative delays are all working as intended. Example: https://codepen.io/danwilson/pen/vrjPGx/?editors=0010 In the example, the second row circles are the only ones with positive delays specified and should be animating as well. Steps to Reproduce: 1. Setup an animation such as: element.animate([ { transform: 'scale(1)' }, { transform: 'scale(.5)' } ], { duration: 1000, delay: 500 }); Expected Results: After 500ms, the element will start to scale to .5 over the course of 1000ms Actual Results: No animation occurs, and the element stays at scale(1). Build: Release 59 (Safari 12.0, WebKit 13606.1.21)
Attachments
Patch (7.79 KB, patch)
2018-07-26 07:08 PDT, Antoine Quint
dino: review+
Radar WebKit Bug Importer
Comment 1 2018-06-22 23:12:38 PDT
Antoine Quint
Comment 2 2018-07-25 14:26:29 PDT
This is specific to accelerated animations.
Antoine Quint
Comment 3 2018-07-26 07:08:51 PDT
Antoine Quint
Comment 4 2018-07-26 15:16:42 PDT
Note You need to log in before you can comment on or make changes to this bug.